<resources>
    <string name="app_name">Doodle</string>
    <string name="title_activity_main">画板</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="more_color">更多</string>
    <string name="splash_text">动动手指，开启玩乐生活</string>
    <string name="input_login_title">登录</string>
    <string name="input_register_title">注册</string>
    <string name="input_reset_pwd">重置密码</string>
    <!--注册-->
    <string name="register">注册</string>
    <string name="email">注册邮箱:</string>
    <string name="email_hint">帮助您找回密码</string>
    <string name="pwd">注册密码:</string>
    <string name="pwd_again">再次输入:</string>
    <string name="pwd_hint">4～20位字母，下划线或数字</string>
    <string name="name">用户昵称:</string>
    <string name="name_hint">3～10位字母，下划线或数字</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="user">用户:</string>
    <string name="login_pwd">密码:</string>
    <string name="user_hint">用户名或邮箱</string>

    <!--重置密码-->
    <string name="user_email">邮箱:</string>
    <string name="user_email_hint">请输入注册的邮箱</string>
    <string name="get_check_code">获取校验码</string>

    <!--验证邮箱-->
    <string name="check_code_title">验证邮箱</string>
    <string name="check_code">校验码:</string>
    <string name="check_code_hint">请输入邮箱校验码</string>
    <string name="check_code_remain">请去邮箱查收校验码</string>

    <!--重置密码-->
    <string name="reset_pwd_title">重置密码</string>
    <string name="reset_pwd">输入密码:</string>
    <string name="reset_pwd_hint">请输入新密码</string>
    <string name="reset_pwd_again">再次输入:</string>
    <string name="reset_pwd_again_hint">请再次输入新密码</string>


    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>
