<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="300dp"
             android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/common_title"
            android:text="@string/input_register_title"/>

        <LinearLayout
            style="@style/edit_wrap_style"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/edit_title_style"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/et_name"
                style="@style/edit_style"
                android:hint="@string/name_hint"/>
        </LinearLayout>

        <LinearLayout style="@style/edit_wrap_style">

            <TextView
                style="@style/edit_title_style"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/et_email"
                style="@style/edit_style"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout style="@style/edit_wrap_style">

            <TextView
                style="@style/edit_title_style"
                android:text="@string/pwd"/>

            <EditText
                android:id="@+id/et_pwd"
                style="@style/edit_style"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            style="@style/edit_wrap_style"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/edit_title_style"
                android:text="@string/pwd_again"/>

            <EditText
                android:id="@+id/et_pwd_again"
                style="@style/edit_style"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"/>
        </LinearLayout>

       <include layout ="@layout/dialog_bottom"/>
    </LinearLayout>

    <include layout ="@layout/dialog_progress_bar"/>
</FrameLayout>
